--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
-  app:
-    image: 'myhelloworld101'
+  myfirstapp:
+    image: 'demo101dc'
     build: 
       context: '.'
       dockerfile: Dockerfile
@@ -10,5 +10,14 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=development
       - Logging__LogLevel__Default=Warning
-      - Logging__LogLevel__System=Warning
-      - Logging__LogLevel__Microsoft=Error
+
+  mysecondapp:
+    image: 'demo101dc'
+    build: 
+      context: '.'
+      dockerfile: Dockerfile
+    ports:
+      - "9090:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=development
+      - Logging__LogLevel__Default=Trace
