--- a/k8s_manifest/deployment.yaml
+++ b/k8s_manifest/deployment.yaml
@@ -6,26 +6,26 @@ metadata:
     app.kubernetes.io/name: mydemo201
     app.kubernetes.io/instance: mydemo201
     app.kubernetes.io/managed-by: mydemo201-service
-    app.kubernetes.io/namespace: demo201
+    app.kubernetes.io/namespace: demo201a
 spec:
-  replicas: 2
+  replicas: 10
   strategy:
     type: RollingUpdate
   selector:
     matchLabels:
       app.kubernetes.io/name: mydemo201
       app.kubernetes.io/instance: mydemo201
-      app.kubernetes.io/namespace: demo201
+      app.kubernetes.io/namespace: demo201a
   template:
     metadata:
       labels:
         app.kubernetes.io/name: mydemo201
         app.kubernetes.io/instance: mydemo201
-        app.kubernetes.io/namespace: demo201
+        app.kubernetes.io/namespace: demo201a
     spec:
       containers:
       - name: mydemo201-app
-        image: lturmel/demo201:latest
+        image: lturmel/myhelloworld:0.0.1
         imagePullPolicy: Always
         env:
           - name: AppName
@@ -34,25 +34,3 @@ spec:
           - containerPort: 80
             name: http
             protocol: TCP
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mydemo201-service
-  labels:
-    app.kubernetes.io/name: mydemo201
-    app.kubernetes.io/instance: mydemo201
-    app.kubernetes.io/managed-by: mydemo201
-    app.kubernetes.io/namespace: demo201
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: mydemo201
-    app.kubernetes.io/instance: mydemo201
-    app.kubernetes.io/namespace: demo201
